--- a/ventes.html
+++ b/ventes.html
@@ -32,6 +32,28 @@
 </div>
     </header>
 
+    <div class="hero_content">
+
+        <h1 class="content_title"> Nos occasions </h1>
+
+    </div>
+
+
+    <main>
+        
+    <div class="occasion_gallery">
+<img src="assets/occasion1.png" alt="occasion1">
+<h3> </h3>
+<img src="assets/Occasion2.png" alt="occasion2">
+<img src="assets/occasion3.png" alt="occasion3">
+<img src="assets/occasions4.png" alt="occasion4">
+<img src="assets/occasion5.png" alt="occasion5">
+<img src="assets/occasion6.png" alt="occasion6">
+    </div>
+
+
+    </main>
+
     <footer class="footer"> 
 
         <div class="footer_info">
